<resources>
    <string name="app_name">ThoughtSpot</string>
    <string name="action_settings">Settings</string>
    <string name="edit_activity_name_default">Add Activity Name</string>
    <string name="edit_activity_location_default">Add Location</string>
    <string name="edit_activity_notes_default">Add Description</string>
    <string name="dollar_sign">$</string>
    <string name="hyphen">-</string>
    <string name="add_photo_button">Add Photos</string>
    <string name="add_tags_button">Add Tags</string>
    <string name="edit_group_name_default">Add Group Name</string>
    <string name="edit_group_description_default">Add Description</string>
    <string name="submit">Submit</string>
</resources>
